2005-09-08  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.f (XLIB:CHANGE-POINTER-CONTROL): use
	Fixnum_minus1 instead of fixnum(-1) which is actually illegal

2005-09-08  Sam Steingold  <sds@gnu.org>

	* genclisph.d (emit_define_test, emit_define): new functions
	(emit_define1): new macro
	(define_count): new static variable
	(main): use it in stat output
	* lispbibl.dl: use emit_define and emit_define1 in _some_ places
	cannot use it for fixnum() and The[Type] yet

2005-09-08  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/test.tst: check that OPEN :IF-EXISTS
	:RENAME-AND-DELETE produces a file with a new INODE (bug 1239523)

2005-09-08  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (record_) [TYPECODES]: rectype and recflags should
	come in the same order in lispbibl.d and clisp.h
	same for SRECORD_HEADER and XRECORD_HEADER
	Reported by "Dr. Werner Fink" <werner@suse.de>

2005-09-07  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/test.tst: test file locking by starting and
	controlling via pipes two sub-processes
	(flush-stream, proc-send): new functions

2005-09-07  Sam Steingold  <sds@gnu.org>

	* genclisph.d (emit_typedef_f): increment typedef_count, not test_count

2005-09-06  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (POSIX::STREAM-LOCK) [!WIN32_NATIVE]:
	when LOCK-P is NIL, actually do unlock
	[WIN32_NATIVE]: fixed :BLOCK handling
	always use OS to get file size instead of calling FILE-LENGTH
	because on win32 FILE-LENGTH will fail with ERROR_LOCK_VIOLATION
	when the underlying file is locked

2005-09-05  Sam Steingold  <sds@gnu.org>

	* makemake.in (DISTFILE): use ${host} as discovered by configure

2005-09-04  Sam Steingold  <sds@gnu.org>

	* configure: when libsigsegv is not found, print instructions on
	getting/building libsigsegv and bail out;
	override with --ignore-absence-of-libsigsegv

2005-09-05  Sam Steingold  <sds@gnu.org>

	* makemake.in (LISPBIBL_INCLUDES): removed, modules use clisp.h now
